--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body{ width:100%; position:relative;}
 ul , li { list-style:none; }
 a { text-decoration: none;}
 .hidden {  display: none; }
-.jb-box { width: 100%; height: 500px; overflow: hidden;
+.jb-box { width: 100%; height: 100vh; overflow: hidden;
   margin: 0px auto; position: relative; }
 video { width: 100%; position:absolute;}
 #wrap{ width:100%; height: 100%; 
