--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ a { text-decoration: none;}
 .hidden {  display: none; }
 .jb-box { width: 100%; height: 100vh; overflow: hidden;
   margin: 0px auto; position: relative; }
-video { width: 100%; position:absolute;}
+video { width:100%; position:absolute;object-fit:cover;}
 #wrap{ width:100%; height: 100%; 
   box-sizing: border-box; position:absolute;}
 #clock { margin: 15% auto 0; width: 650px; height: 180px;
@@ -29,7 +29,7 @@ video { width: 100%; position:absolute;}
 #todo-list button { color: white; outline:none; border:none; background:none;
   cursor:pointer; }
 #quote { margin: 0 auto; position:fixed; transform:translate(-50%,-50%);
-  color:white; bottom:20px;left:50%;}
+  color:white; top:700px;left:50%;}
 #quote :first-child { display:inline-block; text-align: center; width: 100%; }
 #quote :last-child { display:inline-block; text-align: center; width: 100%; }
 #weather { position: fixed; top:5px; right:10px; color:white;
