--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,9 @@ body{ width:100%; position:relative;}
 ul , li { list-style:none; }
 a { text-decoration: none;}
 .hidden {  display: none; }
-.jb-box { width: 100%; height: 100vh; overflow: hidden;
-  margin: 0px auto; position: relative; }
+.jb-box { width: 100%; height: 100vh; overflow: hidden; position: relative; }
 video { width:100%; position:absolute;object-fit:cover;}
-#wrap{ width:100%; height: 100%; 
+#wrap{ width:100%; height: 100%; z-index: 100;
   box-sizing: border-box; position:absolute;}
 #clock { margin: 15% auto 0; width: 650px; height: 180px;
   font-size: 160px; text-align: center; line-height: 180px; color:white;
@@ -29,7 +28,7 @@ video { width:100%; position:absolute;object-fit:cover;}
 #todo-list button { color: white; outline:none; border:none; background:none;
   cursor:pointer; }
 #quote { margin: 0 auto; position:fixed; transform:translate(-50%,-50%);
-  color:white; top:680px;left:50%;}
+  color:white; bottom:20px;left:50%;}
 #quote :first-child { display:inline-block; text-align: center; width: 100%; }
 #quote :last-child { display:inline-block; text-align: center; width: 100%; }
 #weather { position: fixed; top:5px; right:10px; color:white;
